# NucleusIQ

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_MCP_TOOL_VERIFICATION.md  FIRST_RELEASE_TODO.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  MCP_IMPLEMENTATION_VERIFICATION.md  NucleusIQ_Philosphy.md  OPENAI_AGENT_IMPLEMENTATION.md  README.md  RELEASE.md  RELEASE_PLAN_v070.md  ROADMAP.md  STORY.md  TEST_REPORT.md  TEST_SUITE_SUMMARY.md  TODAY_CHECKLIST.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.py  test_quick.py  test_report.html  test_results.xml
src/nucleusiq/: README.md  __init__.py  pyproject.toml
src/nucleusiq/agents/: __init__.py  agent.py  plan.py  react_agent.py  task.py
src/nucleusiq/agents/builder/: __init__.py  base_agent.py  base_anget.py
src/nucleusiq/agents/components/: __init__.py  executor.py
src/nucleusiq/agents/config/: __init__.py  agent_config.py
src/nucleusiq/agents/structured_output/: config.py  parser.py
src/nucleusiq/core/: __init__.py  errors.py
src/nucleusiq/core/agents/: __init__.py  agent.py  agent_result.py  attachments.py  chat_models.py  errors.py  execution_context.py  plan.py  react_agent.py  task.py
src/nucleusiq/core/agents/builder/: __init__.py  base_agent.py
src/nucleusiq/core/agents/components/: __init__.py  compute_budget.py  critic.py  decomposer.py  executor.py  pricing.py  progress.py  refiner.py  usage_tracker.py  validation.py
src/nucleusiq/core/agents/config/: __init__.py  agent_config.py  observability_config.py
src/nucleusiq/core/agents/context/: __init__.py  budget.py  compactor.py  config.py  counter.py  document_corpus_tools.py  document_search.py  engine.py  evidence.py  evidence_tools.py  phase_control.py  pipeline.py  policy.py  recall_tools.py  recall_tracker.py  state_activator.py  store.py  synthesis_package.py  telemetry.py  workspace.py  workspace_tools.py
src/nucleusiq/core/agents/messaging/: __init__.py  message_builder.py
src/nucleusiq/core/agents/modes/: __init__.py  autonomous_mode.py  base_mode.py  direct_mode.py  standard_mode.py  tool_payload.py
src/nucleusiq/core/agents/observability/: __init__.py  _response_parser.py  default_tracer.py  noop_tracer.py  protocol.py  record_builders.py
src/nucleusiq/core/agents/planning/: __init__.py  plan_creator.py  plan_executor.py  plan_parser.py  planner.py  prompt_strategy.py  schema.py
src/nucleusiq/core/agents/structured_output/: __init__.py  config.py  errors.py  handler.py  parser.py  resolver.py  types.py
src/nucleusiq/core/agents/usage/: __init__.py  pricing.py  usage_tracker.py
src/nucleusiq/core/errors/: __init__.py  base.py
src/nucleusiq/core/llms/: __init__.py  base.py  base_llm.py  errors.py  llm_params.py  mock_llm.py  retry_policy.py
src/nucleusiq/core/memory/: __init__.py  base.py  errors.py  factory.py  full_history.py  sliding_window.py  summary.py  summary_window.py  token_budget.py
src/nucleusiq/core/plugins/: __init__.py  base.py  decorators.py  errors.py  manager.py
src/nucleusiq/core/plugins/builtin/: __init__.py  attachment_guard.py  context_window.py  human_approval.py  model_call_limit.py  model_fallback.py  pii_guard.py  result_validator.py  tool_call_limit.py  tool_guard.py  tool_retry.py
src/nucleusiq/core/prompts/: __init__.py  auto_chain_of_thought.py  base.py  chain_of_thought.py  errors.py  factory.py  few_shot.py  meta_prompt.py  prompt_composer.py  retrieval_augmented_generation.py  zero_shot.py
src/nucleusiq/core/streaming/: __init__.py  errors.py  events.py
src/nucleusiq/core/tests/: __init__.py  conftest.py
src/nucleusiq/core/tools/: __init__.py  base_tool.py  decorators.py  errors.py
src/nucleusiq/core/tools/builtin/: __init__.py  directory_list.py  file_extract.py  file_read.py  file_search.py  file_write.py  workspace.py
src/nucleusiq/core/utilities/: __init__.py  clustering.py
src/nucleusiq/examples/agents/: attachment_guard_example.py  autonomous_mode_example.py  dummy_agent.py  echo_agent.py  file_attachment_example.py  file_tools_example.py  react_agent_example.py  simple_agent_example.py  streaming_example.py  task_prompt_plan_example.py  v050_features_example.py
src/nucleusiq/examples/prompts/: __init__.py  auto_chain_of_thought_examples.py  chain_of_thought_examples.py  example_meta_prompt_usage.py  few_shot_examples.py  prompt_composer_examples.py  retrieval_augmented_generation_examples.py  usage_example_composer_prompts.py  zero_shot_examples.py
src/nucleusiq/examples/tools/: advanced_tool_examples.py  pydantic_schema_examples.py  tool_examples.py
src/nucleusiq/llms/: base.py  base_llm.py  mock_llm.py
src/nucleusiq/prompts/: README.md  auto_chain_of_thought.py  base.py  chain_of_thought.py  factory.py  few_shot.py  meta_prompt.py  prompt_composer.py  retrieval_augmented_generation.py  zero_shot.py
src/nucleusiq/providers/: __init__.py
src/nucleusiq/providers/dbs/: __init__.py
src/nucleusiq/providers/dbs/chroma/: __init__.py
src/nucleusiq/providers/dbs/pinecone/: __init__.py
src/nucleusiq/providers/inference/: __init__.py
src/nucleusiq/providers/llms/: __init__.py
src/nucleusiq/tests/: conftest.py
src/nucleusiq/tests/agents/: test_agent.py  test_agent_coverage.py  test_agent_precedence.py  test_execution_modes.py
src/nucleusiq/tests/integration/: test_attachment_integration.py  test_context_management_e2e.py  test_edge_cases_integration.py  test_file_tools_integration.py  test_recall_round_trip_e2e.py  test_streaming_integration.py
src/nucleusiq/tests/prompts/: test_chain_of_thought_prompt.py  test_meta_prompt.py  test_metadata_tags.py  test_output_parser.py  test_partial_variables_various_types.py
src/nucleusiq/tests/unit/: test_error_hierarchy.py  test_execution_tracer.py  test_package_init.py  test_package_init_additional.py
src/nucleusiq/utilities/: __init__.py  clustering.py
src/providers/inference/groq/: README.md  pyproject.toml
src/providers/inference/ollama/: README.md  pyproject.toml
src/providers/llms/openai/: pyproject.toml
(+517 files in other folders)
