[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleusiq"
version = "0.1.0"
description = "NucleusIQ is an open-source framework for building and managing autonomous AI agents. It offers diverse strategies and architectures to create intelligent chatbots, financial tools, and multi-agent systems. With NucleusIQ, developers have the core components and flexibility needed to develop advanced AI applications effortlessly."
readme = "README.md"
requires-python = ">=3.6,<4.0"
license = { text = "Apache-2.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["AI", "agents", "orchestration", "framework"]
homepage = "https://github.com/nucleusbox/NucleusIQ"
repository = "https://github.com/nucleusbox/NucleusIQ"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.25.1",
    "flask>=2.0.1",
    # Add other runtime dependencies here
]

[project.urls]
Documentation = "https://github.com/nucleusbox/NucleusIQ#readme"
Source = "https://github.com/nucleusbox/NucleusIQ"
Tracker = "https://github.com/nucleusbox/NucleusIQ/issues"
