[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleusiq"
version = "0.1.0"
description = "NucleusIQ – open-source framework for building autonomous AI agents with advanced prompt engineering, flexible execution modes, and modular architecture."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Nucleusbox", email = "info@nucleusbox.com" }
]
keywords = ["AI", "agents", "orchestration", "framework", "prompt-engineering", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "PyYAML>=5.4,<7.0",
    "python-dotenv>=0.19.0,<2.0",
    "requests>=2.25.1,<3.0",
]

[project.optional-dependencies]
openai = ["nucleusiq-openai"]
# Future providers (uncomment when published)
# gemini = ["nucleusiq-gemini"]
# groq = ["nucleusiq-groq"]
# ollama = ["nucleusiq-ollama"]
# pinecone = ["nucleusiq-pinecone"]
# chroma = ["nucleusiq-chroma"]
clustering = ["scikit-learn>=1.0"]

[project.urls]
Homepage = "https://github.com/nucleusbox/NucleusIQ"
Documentation = "https://github.com/nucleusbox/NucleusIQ#readme"
Repository = "https://github.com/nucleusbox/NucleusIQ"
Issues = "https://github.com/nucleusbox/NucleusIQ/issues"
Changelog = "https://github.com/nucleusbox/NucleusIQ/releases"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735)
# ---------------------------------------------------------------------------
[dependency-groups]
test = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-mock>=3.10,<4.0",
    "scikit-learn>=1.0",
    "nucleusiq-openai",
]
lint = [
    "ruff>=0.4,<1.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

# ---------------------------------------------------------------------------
# uv – local editable sources for monorepo development
# ---------------------------------------------------------------------------
[tool.uv.sources]
nucleusiq-openai = { path = "../providers/llms/openai", editable = true }

# ---------------------------------------------------------------------------
# Setuptools – map core/ directory to nucleusiq package
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "nucleusiq" = "core" }
packages = [
    "nucleusiq",
    "nucleusiq.agents",
    "nucleusiq.agents.builder",
    "nucleusiq.agents.components",
    "nucleusiq.agents.config",
    "nucleusiq.agents.structured_output",
    "nucleusiq.llms",
    "nucleusiq.tools",
    "nucleusiq.prompts",
    "nucleusiq.utilities",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long – handled by formatter
    "B008",    # function call in default argument
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -vv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring live API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
omit = ["tests/*", "examples/*"]
