[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nucleusiq-groq"
version = "0.1.0"
description = "Groq provider for the NucleusIQ AI agent framework. Ultra-fast LLM inference with NucleusIQ."
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "Nucleusbox", email = "info@nucleusbox.com" }]
keywords = ["AI", "agents", "groq", "fast-inference", "nucleusiq"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "nucleusiq>=0.1.0",
    "groq>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/nucleusbox-dev/NucleusIQ"
Repository = "https://github.com/nucleusbox-dev/NucleusIQ"
Issues = "https://github.com/nucleusbox-dev/NucleusIQ/issues"

[dependency-groups]
test = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
]
dev = [{ include-group = "test" }]

[tool.uv.sources]
nucleusiq = { path = "../../../nucleusiq", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["nucleusiq_groq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
